<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Organicity Experimentation</string>
    <string name="showDisconnected">Show Disconnected Applications</string>
    <string name="Version">0.3</string>
    <string name="home_no_apps">Waiting for applications to connect&#8230;</string>
    <string name="deviceId_label">Organicity Device ID:</string>
    <string name="experiment_label">Organicity Experiment:</string>
    <string name="app_list_label">Authorized Applications</string>
    <string name="app_contextmenu_remove">Remove Application</string>
    <string name="app_settings">Application Settings</string>
    <string name="save_app_authorization">Save Settings</string>
    <string name="plug_list_label">Installed Context Plugins</string>
    <string name="app_list_contextmenu_title">Application Options</string>
    <string name="plug_contextmenu_remove">Uninstall Context Plugin</string>
    <string name="plug_list_context_menu_title">Context Plugin Options</string>
    <string name="plug_details_label">Context Plugin Details</string>
    <string name="plug_description_label">Description</string>
    <string name="plug_fidelity_label">Supported Context Information</string>
    <string name="dynamix_enable_toggle_on">Experimentation is Enabled</string>
    <string name="dynamix_enable_toggle_off">Experimentation is Disabled</string>
    <string name="dynamix_restarting">Experimentation is Restarting</string>
    <string name="plugin_enable_toggle_on">Plugin Enabled</string>
    <string name="plugin_enable_toggle_off">Plugin Disabled</string>
    <string name="btn_plugin_uninstall">Uninstall Plugin</string>
    <string name="app_settings_label">Application Settings</string>
    <string name="app_description_label">Description</string>
    <string name="plugin_settings_label">Sensor Privacy Settings</string>
    <string name="btn_uninstall_app">Uninstall Application</string>
    <string name="app_contextmenu_block">Block/Unblock Application</string>
    <string name="app_privacy_policy_label">Privacy Policy</string>
    <string name="app_settings_contextmenu_fidelity">Set Custom Trust Level</string>
    <string name="btn_add_new_privacy_policy">Add New Privacy Policy</string>
    <string name="privacy_policy_list_label">Available Privacy Policies</string>
    <string name="privacy_policy_description_label">Description</string>
    <string name="privacy_policy_click_me">Tap to view details&#8230;</string>
    <string name="enable_disable_label">Enable/Disable</string>
    <string name="pending_app_list_label">Pending Applications</string>
    <string name="app_pending_message">Tap to setup application privacy&#8230;</string>
    <string name="btn_update_scan">Find Updates</string>
    <string name="dynamix_notification_titlebar">Dynamix Message</string>
    <string name="dynamix_notification_title">Dynamix Context Framework</string>
    <string name="pending_app_notification">Application(s) awaiting authorization</string>
    <string name="btn_finished_app_edit">Save Settings</string>
    <string name="btn_finished_app_pending">Authorize Application</string>
    <string name="dynamix_settings_label">Dynamix Settings</string>
    <string name="updates_list_label">Available Updates</string>
    <string name="btn_do_updates">Install Updates</string>
    <string name="btn_configure_context_plugin">Configure Plugin</string>
    <string name="pref_audible_alerts_title">Audible Alerts</string>
    <string name="btn_find_experiments">Find Experiments</string>
    <string name="btn_install_experiments">Install Experiment</string>
    <string name="plug_stats_label">Most recent events</string>
    <string name="plug_stats_summary_label">Sensors Statistics</string>
    <string name="btn_see_plugin_stats">View Statistics</string>
    <string name="btn_find_plugs">Find Sensors</string>
    <string name="btn_install_plugs">Install Sensors</string>
    <string name="btn_see_plugin_details">View Sensor Details</string>
    <string name="update_description_label">Update Description</string>
    <string name="update_priority_label">Update Priority</string>
    <string name="update_target_label">Version Information</string>
    <string name="context_plugin_updates_available">Context Sensor Update(s) Available</string>
    <string name="privacy_policy_summary"></string>
    <string name="custom_policy_summary">Tap and hold any Sensor below to set a custom trust level, or tap it to view its description.</string>
    <string name="custom_privacy_settings_label">Custom Privacy Settings</string>
    <string name="cancel_install_label">Cancel Installation</string>
    <string name="cancel_update_label">Cancel Update</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="about1">
        OrganiCity is a new EU project that puts people at the centre of the development of future cities. The project brings together 3 leading smart cities and a total of 15 consortium members with great diversity in skills and experience.

        OrganiCity is a close collaboration between Aarhus, London and Santander – three cities which all have extensive experience using so-called “smart city” technologies. These technologies include ways to improve cities’ services for citizens while at the same time reducing resource consumption.

        This software aims to provide an Android smartphone application augmenting the functionality of an existing Future Internet infrastructure.
        &lt;p&gt;The Android software component distributes executable code on smartphone devices of a network of volunteers. The code is deployed as Ambient Dynamix plugins, performs calculations and produces sensor results, that are uploaded to a central server. There is a central software component responsible for distributing the plugins and collecting the results.
    	&lt;p&gt;For more information regarding Organicity you can visit:
		&lt;a href=&quot;http://organicity.eu&quot;&gt;http://organicity.eu&lt;a&gt;
		&lt;p&gt;For more information regarding the Ambient Dynamix framework you can visit: 
		&lt;a href=&quot;http://ambientdynamix.org&quot;&gt;http://ambientdynamix.org&lt;a&gt;
	</string>
    <string name="expIsEnabled">Experimentation is enabled</string>
    <string name="expIsDisabled">Experimentation is disabled</string>
    <string name="noAuthApps"></string>
    <string name="no_context_plugins">No context Sensors</string>
    <string name="no_experiments">No Experiments</string>
    <string name="installed_context_plugins">Installed Sensors</string>
    <string name="installed_experiments">Active Experiments</string>
    <string name="available_context_plugins">Other Available Sensors</string>
    <string name="available_experiments">Available Experiments</string>
    <string name="no_available_context_plugins">No available Sensors</string>
    <string name="no_available_experiments">No available Experiments</string>
    <string name="tap_find_plugins">"Tap 'Find Sensors' to search for compatible Sensors"</string>
    <string name="tap_find_experiments">"Tap 'Find Experiments' to search for available Experiments"</string>
    <string name="sensor_rules">Sensor Rules</string>
    <string name="executed_experiment">Executed Experiment</string>
    <string name="install_pending">Install pending&#8230;</string>
    <string name="plugin_not_conf">Not configured. Tap to configure.</string>
    <string name="plugin_enabled">Enabled. Tap and hold to disable or uninstall.</string>
    <string name="plugin_disabled">Disabled. Tap and hold to enable.</string>
    <string name="placeholder_empty">-</string>
    <string name="empty" />
    <string name="no_plugins_installed">No plug-ins installed.</string>
    <string name="no_updates_found">No updates found.</string>
    <string name="dynamix_framework">Dynamix Framework</string>
    <string name="placeholder_from_empty">From: -</string>
    <string name="placeholder_to_empty">To: -</string>
    <string name="placeholder_item_name">Item name here...</string>
    <string name="no_pending_applications">No pending applications</string>
    <string name="low">LOW</string>
    <string name="no_events_yet">No events yet...</string>
    <string name="status">Status</string>
    <string name="phone_id">PhoneId:</string>
    <string name="time_reported">time reported</string>
    <string name="expires">expires</string>
    <string name="getOrgDevID">Getting Organicity Device ID</string>
    <string name="orgDevID">Organicity Device ID</string>
    <string name="conWith">Connected with Organicity Server</string>
    <string name="disConWith">Disconnected from Organicity Server</string>
    <string name="statsTotalTime">Total time online (Hours)</string>
    <string name="statsNumOfExp">Experiments Run</string>
    <string name="statsNumOfReadings">Measurements Gathered</string>
    <string name="stats7Days">Histogram of data collected last week</string>
    <string name="pending_messages_template">Send %d pending measurements...</string>
    <string name="send_data_now">Send Pending measurements</string>
    <string name="gcm_defaultSenderId">770161861153</string>
    <string name="phone_id_generated">phone_id_generated</string>
    <string name="experiment_id_generated">experiment_id_generated</string>
    <string name="no_experiment_installed">No experiment downloaded. Visit the plugins tab to select the sensors you want to share and the experiments tab to select the experiment you want to participate in.</string>
    <string name="experimentEnabled">Experiment Enabled</string>
    <string name="experimentDisabled">Experiment Disabled</string>
    <string name="no_experiment_is_installed">No Currently Installed Experiment</string>
    <string name="configure_plugin">Configure Plug-in</string>
    <string name="configuration_offline">Configuration Offline</string>
    <string name="no_configuration">No Configuration</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="sensor_temperature">Ambient Temperature</string>
    <string name="sensor_relative_humidity">Relative Humidity</string>
    <string name="sensor_pressure">Atmospheric Pressure</string>
    <string name="sensor_noise">Ambient Noise</string>
    <string name="today">Today</string>
    <string name="all_time">All time</string>
    <string name="dataToday">Heatmap of data collected today</string>
</resources>