<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/deviceId_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/deviceId_label" />

    <TextView
        android:id="@+id/experiment_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/no_experiment_installed"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <fragment
        android:id="@+id/map_main"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="180dp" />

    <org.lucasr.twowayview.TwoWayView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/lvItems"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawSelectorOnTop="false"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/send_pending_now"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_data_now">

    </Button>

</LinearLayout>