<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:padding="6dip"
            android:background="#333333"
            android:layout_margin="2dip">

        <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="6dip"
                android:src="@drawable/icon"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="fill_parent">

            <TextView
                    android:id="@+id/plug_name"
                    android:layout_width="fill_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:id="@+id/plug_status"
                    android:singleLine="true"
                    android:ellipsize="marquee"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:text="@string/plug_stats_summary_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"/>


    <TextView
            android:id="@+id/plug_stats_summary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>


    <TextView
            android:text="@string/empty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>

    <TextView
            android:text="@string/plug_stats_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <ListView
            android:layout_width="fill_parent"
            android:id="@android:id/list"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    <TextView
            android:id="@android:id/empty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_events_yet"
            android:layout_gravity="top"
            android:layout_weight="1"/>

</LinearLayout>